# safe_format

./: CHANGELOG.md  Cargo.toml  README.md
src/: lib.rs
tests/: safe_format_tests.rs
