[package]
name = "safe_format"
version = "0.1.0"
edition = "2021"
description = "safe_format! macro works similarly to the built-in format! macro but allows for named parameters and it safely ignores any extra parameters that are not used in format string"

[lib]name = "safe_format"
version = "0.1.0"
edition = "2021"
proc-macro = true

[dependencies]
proc-macro2 = "1.0.86"
quote = "1.0.36"
syn = "2.0.70"
